assets/css/style.css
/* ... */
@keyframes loader-dash {
  0% {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
  }
  50% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -35px;
  }
  100% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -136px;
  }
}

.intro-paragraph {
  font-size: 1rem !important;
  color: #999999 !important;
}

.icons {
  list-style: none;
}

.links-gap {
  gap: 0 1rem;
}

.sizer {
  width: 300px;
}

.grow {
  transition: all 0.2s ease-in-out;
}

.grow:hover {
  transform: scale(1.1);
}

.grow-large {
  transition: all 0.2s ease-in-out;
}

.grow-large:hover {
  transform: scale(1.5);
  margin: 0 5rem 5rem;
}

.icon-span {
  line-height: 0.8rem;
}

.other-projects {
  padding: 15px 0;
}

.project-image {
  object-fit: cover;
  max-width: 350px;
  max-height: 300px;
  margin-bottom: 1rem;
}

.project-description {
  padding: 0 15px;
  color: #999 !important;
}

#profile-picture {
  max-height: 400px;
}

.contact-text {
  font-size: 1rem;
}

